ok lets push this baby!!!!

--- a/legacy_source/about.css
+++ b/legacy_source/about.css
@@ -7,22 +7,20 @@
   justify-content: center;
   align-items: center;
 }
-
 .image-container img {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-
 .image-container .layer-bg {
   z-index: 1;
 }
-
 .image-container .layer-top {
   z-index: 2;
   transform-origin: center center;
   will-change: transform;
-}
+}/*# sourceMappingURL=about.css.map */
